--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 
   <script>
     async function loadData() {
-      const response = await fetch("https://raw.githubusercontent.com/lina3501000/webside-pico-heu/main/data.json");
-      const data = await response.json();
-      document.getElementById("temp").textContent = data.temperature + " °C";
-      document.getElementById("time").textContent = data.time;
+      const url = "https://raw.githubusercontent.com/lina3501000/webside-pico-heu/main/data.json?nocache=" + new Date().getTime();
+      try {
+        const response = await fetch(url);
+        const data = await response.json();
+        document.getElementById("temp").textContent = data.temperature + " °C";
+        document.getElementById("time").textContent = data.time;
+      } catch (error) {
+        console.error("Fehler beim Laden der Daten:", error);
+      }
     }
 
     loadData();
-    setInterval(loadData, 60000); // alle 60 Sekunden aktualisieren
+    setInterval(loadData, 60000); // alle 60 Sekunden
   </script>
 </body>
 </html>
