--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
   <script>
     async function loadData() {
-      const url = "https://raw.githubusercontent.com/lina3501000/webside-pico-heu/main/data.json?nocache=" + new Date().getTime();
       try {
-        const response = await fetch(url);
+        const response = await fetch("https://raw.githubusercontent.com/lina3501000/webside-pico-heu/main/data.json");
         const data = await response.json();
         document.getElementById("temp").textContent = data.temperature + " °C";
         document.getElementById("time").textContent = data.time;
